--- a/TodoMinimalApi/Dockerfile
+++ b/TodoMinimalApi/Dockerfile
@@ -12,19 +12,19 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Todo-Service-Minimal-API.csproj", "."]
-RUN dotnet restore "./Todo-Service-Minimal-API.csproj"
+COPY ["TodoMinimalApi.csproj", "."]
+RUN dotnet restore "./TodoMinimalApi.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "./Todo-Service-Minimal-API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./TodoMinimalApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Todo-Service-Minimal-API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./TodoMinimalApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Todo-Service-Minimal-API.dll"]
+ENTRYPOINT ["dotnet", "TodoMinimalApi.dll"]
